--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.10.5",
     "@mui/x-data-grid": "^5.17.2",
+    "@mui/x-date-pickers": "^6.11.0",
+    "@mui/x-date-pickers-pro": "^6.11.1",
     "@nivo/bar": "^0.83.0",
     "@nivo/core": "^0.83.0",
     "@nivo/geo": "^0.83.0",
@@ -22,9 +25,12 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^1.4.0",
     "chart.js": "^3.9.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
